docs: finaliza projeto — adiciona README, atualiza RESULTS com Fase 2, remove PROGRESS e adiciona dashboard de monitoramento